# oil_trans_in_caspian_sea

./: .gitignore  CMakeLists.txt  README.md
opencl/slae/direct/: tridiagonal.cl
opencl/utils/: max.cl
opencl/wind_induced_currents/davies85/variable_parameters/: solver.cl
opencl/wind_induced_currents/davies85/variable_parameters/nu/: update_uniform_nu.cl
opencl/wind_induced_currents/davies85/variable_parameters/q/: update_uniform_q.cl
post_processing/wind_induced_currents/davies85/: source_surface_viscosity_comparison_table.py  source_tidal_viscosity_comparison_table.py
slae/: CMakeLists.txt
slae/direct/: tridiagonal.cpp  tridiagonal.h
wind_induced_currents/: CMakeLists.txt  main.cpp
wind_induced_currents/davies85/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
wind_induced_currents/davies85/constant_parameters/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
wind_induced_currents/davies85/non_periodic_bc/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
wind_induced_currents/davies85/parallel/variable_parameters/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
wind_induced_currents/davies85/variable_parameters/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
wind_induced_currents/davies85/variable_step_size/: solver.cpp  solver.h
wind_induced_currents/davies85/variable_step_size/variable_depth/: solver.cpp  solver.h
